# Ur5pymoveit2

./: CMakeLists.txt  README.md  how to connect to robot.txt
examples/: ex_collision_mesh.py  ex_collision_primitive.py  ex_gripper.py  ex_io_port_toggle.py  ex_joint_goal.py  ex_main.py  ex_pose_goal.py  ex_servo.py
msg/: MaterialPose.msg
pymoveit2/: __init__.py
pymoveit2/robots/: ur5.py
textilePrograms/: io_port_toggle.py  main.py  pick_goal.py  place_cotton.py  place_mix.py  place_wool.py  testPub.py  testSub.py
